rtcpnc/pkowalski.rtcp.model.syntax/src/main/java/pkowalski/rtcp/model/syntax/ExpressionParser.java
// $ANTLR 3.0.1 Expression.g 2010-05-29 14:12:19

package pkowalski.rtcp.model.syntax;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

@SuppressWarnings({"ALL"})
public class ExpressionParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IF", "THEN", "ELSE", "PLUS", "MINUS", "MUL", "MOD", "DIV", "EQ", "NEQ", "LTE", "LT", "GTE", "GT", "NOT", "AND", "OR", "ID", "NUM", "PROD", "UNARYEXPR", "MULEXPR", "MODEXPR", "ADDEXPR", "ARITHEXPR", "CMPEXPR", "OREXPR", "ANDEXPR", "LOGICEXPR", "BLOCK", "CONDEXPR", "IDENT", "NUMBER", "DIGIT", "WS", "'('", "')'", "','"
    };
    public static final int LT=15;
    public static final int MOD=10;
    public static final int ELSE=6;
    public static final int GTE=16;
    public static final int NUMBER=36;
    public static final int MULEXPR=25;
    public static final int ANDEXPR=31;
    public static final int NOT=18;
    public static final int MODEXPR=26;
    public static final int MINUS=8;
    public static final int OREXPR=30;
    public static final int ID=21;
    public static final int AND=19;
    public static final int EOF=-1;
    public static final int MUL=9;
    public static final int LTE=14;
    public static final int UNARYEXPR=24;
    public static final int CMPEXPR=29;
    public static final int NUM=22;
    public static final int IF=4;
    public static final int CONDEXPR=34;
    public static final int WS=38;
    public static final int NEQ=13;
    public static final int THEN=5;
    public static final int LOGICEXPR=32;
    public static final int BLOCK=33;
    public static final int PROD=23;
    public static final int OR=20;
    public static final int IDENT=35;
    public static final int GT=17;
    public static final int ARITHEXPR=28;
    public static final int ADDEXPR=27;
    public static final int PLUS=7;
    public static final int DIGIT=37;
    public static final int DIV=11;
    public static final int EQ=12;

        public ExpressionParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "Expression.g"; }


    public static class parse_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start parse
    // Expression.g:52:1: parse : ( expression )? ;
    public final parse_return parse() throws RecognitionException {
        parse_return retval = new parse_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        expression_return expression1 = null;



        try {
            // Expression.g:52:7: ( ( expression )? )
            // Expression.g:53:3: ( expression )?
            {
            root_0 = (Object)adaptor.nil();

            // Expression.g:53:3: ( expression )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==IF||LA1_0==MINUS||LA1_0==NOT||(LA1_0>=IDENT && LA1_0<=NUMBER)||LA1_0==39) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // Expression.g:53:4: expression
                    {
                    pushFollow(FOLLOW_expression_in_parse239);
                    expression1=expression();
                    _fsp--;

                    adaptor.addChild(root_0, expression1.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end parse

    public static class expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start expression
    // Expression.g:57:1: expression : orExpression ;
    public final expression_return expression() throws RecognitionException {
        expression_return retval = new expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        orExpression_return orExpression2 = null;



        try {
            // Expression.g:58:2: ( orExpression )
            // Expression.g:59:3: orExpression
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_orExpression_in_expression257);
            orExpression2=orExpression();
            _fsp--;

            adaptor.addChild(root_0, orExpression2.getTree());

            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end expression

    public static class orExpression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start orExpression
    // Expression.g:62:1: orExpression : orExpressionDef -> ^( OREXPR orExpressionDef ) ;
    public final orExpression_return orExpression() throws RecognitionException {
        orExpression_return retval = new orExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        orExpressionDef_return orExpressionDef3 = null;


        RewriteRuleSubtreeStream stream_orExpressionDef=new RewriteRuleSubtreeStream(adaptor,"rule orExpressionDef");
        try {
            // Expression.g:63:2: ( orExpressionDef -> ^( OREXPR orExpressionDef ) )
            // Expression.g:64:3: orExpressionDef
            {
            pushFollow(FOLLOW_orExpressionDef_in_orExpression271);
            orExpressionDef3=orExpressionDef();
            _fsp--;

            stream_orExpressionDef.add(orExpressionDef3.getTree());

            // AST REWRITE
            // elements: orExpressionDef
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 64:19: -> ^( OREXPR orExpressionDef )
            {
                // Expression.g:64:22: ^( OREXPR orExpressionDef )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(OREXPR, "OREXPR"), root_1);

                adaptor.addChild(root_1, stream_orExpressionDef.next());

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end orExpression

    public static class orExpressionDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start orExpressionDef
    // Expression.g:67:1: orExpressionDef : andExpression ( OR andExpression )* ;
    public final orExpressionDef_return orExpressionDef() throws RecognitionException {
        orExpressionDef_return retval = new orExpressionDef_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token OR5=null;
        andExpression_return andExpression4 = null;

        andExpression_return andExpression6 = null;


        Object OR5_tree=null;

        try {
            // Expression.g:68:2: ( andExpression ( OR andExpression )* )
            // Expression.g:69:3: andExpression ( OR andExpression )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_andExpression_in_orExpressionDef293);
            andExpression4=andExpression();
            _fsp--;

            adaptor.addChild(root_0, andExpression4.getTree());
            // Expression.g:69:17: ( OR andExpression )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==OR) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // Expression.g:69:18: OR andExpression
            	    {
            	    OR5=(Token)input.LT(1);
            	    match(input,OR,FOLLOW_OR_in_orExpressionDef296); 
            	    OR5_tree = (Object)adaptor.create(OR5);
            	    adaptor.addChild(root_0, OR5_tree);

            	    pushFollow(FOLLOW_andExpression_in_orExpressionDef298);
            	    andExpression6=andExpression();
            	    _fsp--;

            	    adaptor.addChild(root_0, andExpression6.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end orExpressionDef

    public static class andExpression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start andExpression
    // Expression.g:72:1: andExpression : andExpressionDef -> ^( ANDEXPR andExpressionDef ) ;
    public final andExpression_return andExpression() throws RecognitionException {
        andExpression_return retval = new andExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        andExpressionDef_return andExpressionDef7 = null;


        RewriteRuleSubtreeStream stream_andExpressionDef=new RewriteRuleSubtreeStream(adaptor,"rule andExpressionDef");
        try {
            // Expression.g:73:2: ( andExpressionDef -> ^( ANDEXPR andExpressionDef ) )
            // Expression.g:74:3: andExpressionDef
            {
            pushFollow(FOLLOW_andExpressionDef_in_andExpression315);
            andExpressionDef7=andExpressionDef();
            _fsp--;

            stream_andExpressionDef.add(andExpressionDef7.getTree());

            // AST REWRITE
            // elements: andExpressionDef
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 74:20: -> ^( ANDEXPR andExpressionDef )
            {
                // Expression.g:74:23: ^( ANDEXPR andExpressionDef )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(ANDEXPR, "ANDEXPR"), root_1);

                adaptor.addChild(root_1, stream_andExpressionDef.next());

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end andExpression

    public static class andExpressionDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start andExpressionDef
    // Expression.g:77:1: andExpressionDef : cmpExpression ( AND cmpExpression )* ;
    public final andExpressionDef_return andExpressionDef() throws RecognitionException {
        andExpressionDef_return retval = new andExpressionDef_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token AND9=null;
        cmpExpression_return cmpExpression8 = null;

        cmpExpression_return cmpExpression10 = null;


        Object AND9_tree=null;

        try {
            // Expression.g:78:2: ( cmpExpression ( AND cmpExpression )* )
            // Expression.g:79:3: cmpExpression ( AND cmpExpression )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_cmpExpression_in_andExpressionDef338);
            cmpExpression8=cmpExpression();
            _fsp--;

            adaptor.addChild(root_0, cmpExpression8.getTree());
            // Expression.g:79:17: ( AND cmpExpression )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==AND) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // Expression.g:79:18: AND cmpExpression
            	    {
            	    AND9=(Token)input.LT(1);
            	    match(input,AND,FOLLOW_AND_in_andExpressionDef341); 
            	    AND9_tree = (Object)adaptor.create(AND9);
            	    adaptor.addChild(root_0, AND9_tree);

            	    pushFollow(FOLLOW_cmpExpression_in_andExpressionDef343);
            	    cmpExpression10=cmpExpression();
            	    _fsp--;

            	    adaptor.addChild(root_0, cmpExpression10.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end andExpressionDef

    public static class cmpExpression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start cmpExpression
    // Expression.g:84:1: cmpExpression : cmpExpressionDef -> ^( CMPEXPR cmpExpressionDef ) ;
    public final cmpExpression_return cmpExpression() throws RecognitionException {
        cmpExpression_return retval = new cmpExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        cmpExpressionDef_return cmpExpressionDef11 = null;


        RewriteRuleSubtreeStream stream_cmpExpressionDef=new RewriteRuleSubtreeStream(adaptor,"rule cmpExpressionDef");
        try {
            // Expression.g:85:2: ( cmpExpressionDef -> ^( CMPEXPR cmpExpressionDef ) )
            // Expression.g:86:3: cmpExpressionDef
            {
            pushFollow(FOLLOW_cmpExpressionDef_in_cmpExpression365);
            cmpExpressionDef11=cmpExpressionDef();
            _fsp--;

            stream_cmpExpressionDef.add(cmpExpressionDef11.getTree());

            // AST REWRITE
            // elements: cmpExpressionDef
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 86:20: -> ^( CMPEXPR cmpExpressionDef )
            {
                // Expression.g:86:23: ^( CMPEXPR cmpExpressionDef )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(CMPEXPR, "CMPEXPR"), root_1);

                adaptor.addChild(root_1, stream_cmpExpressionDef.next());

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end cmpExpression

    public static class cmpExpressionDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start cmpExpressionDef
    // Expression.g:88:1: cmpExpressionDef : arithExpression ( EQ arithExpression | NEQ arithExpression | LTE arithExpression | LT arithExpression | GTE arithExpression | GT arithExpression )? ;
    public final cmpExpressionDef_return cmpExpressionDef() throws RecognitionException {
        cmpExpressionDef_return retval = new cmpExpressionDef_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EQ13=null;
        Token NEQ15=null;
        Token LTE17=null;
        Token LT19=null;
        Token GTE21=null;
        Token GT23=null;
        arithExpression_return arithExpression12 = null;

        arithExpression_return arithExpression14 = null;

        arithExpression_return arithExpression16 = null;

        arithExpression_return arithExpression18 = null;

        arithExpression_return arithExpression20 = null;

        arithExpression_return arithExpression22 = null;

        arithExpression_return arithExpression24 = null;


        Object EQ13_tree=null;
        Object NEQ15_tree=null;
        Object LTE17_tree=null;
        Object LT19_tree=null;
        Object GTE21_tree=null;
        Object GT23_tree=null;

        try {
            // Expression.g:89:2: ( arithExpression ( EQ arithExpression | NEQ arithExpression | LTE arithExpression | LT arithExpression | GTE arithExpression | GT arithExpression )? )
            // Expression.g:89:4: arithExpression ( EQ arithExpression | NEQ arithExpression | LTE arithExpression | LT arithExpression | GTE arithExpression | GT arithExpression )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_arithExpression_in_cmpExpressionDef384);
            arithExpression12=arithExpression();
            _fsp--;

            adaptor.addChild(root_0, arithExpression12.getTree());
            // Expression.g:89:20: ( EQ arithExpression | NEQ arithExpression | LTE arithExpression | LT arithExpression | GTE arithExpression | GT arithExpression )?
            int alt4=7;
            switch ( input.LA(1) ) {
                case EQ:
                    {
                    alt4=1;
                    }
                    break;
                case NEQ:
                    {
                    alt4=2;
                    }
                    break;
                case LTE:
                    {
                    alt4=3;
                    }
                    break;
                case LT:
                    {
                    alt4=4;
                    }
                    break;
                case GTE:
                    {
                    alt4=5;
                    }
                    break;
                case GT:
                    {
                    alt4=6;
                    }
                    break;
            }

            switch (alt4) {
                case 1 :
                    // Expression.g:89:22: EQ arithExpression
                    {
                    EQ13=(Token)input.LT(1);
                    match(input,EQ,FOLLOW_EQ_in_cmpExpressionDef388); 
                    EQ13_tree = (Object)adaptor.create(EQ13);
                    adaptor.addChild(root_0, EQ13_tree);

                    pushFollow(FOLLOW_arithExpression_in_cmpExpressionDef390);
                    arithExpression14=arithExpression();
                    _fsp--;

                    adaptor.addChild(root_0, arithExpression14.getTree());

                    }
                    break;
                case 2 :
                    // Expression.g:89:43: NEQ arithExpression
                    {
                    NEQ15=(Token)input.LT(1);
                    match(input,NEQ,FOLLOW_NEQ_in_cmpExpressionDef394); 
                    NEQ15_tree = (Object)adaptor.create(NEQ15);
                    adaptor.addChild(root_0, NEQ15_tree);

                    pushFollow(FOLLOW_arithExpression_in_cmpExpressionDef396);
                    arithExpression16=arithExpression();
                    _fsp--;

                    adaptor.addChild(root_0, arithExpression16.getTree());

                    }
                    break;
                case 3 :
                    // Expression.g:89:66: LTE arithExpression
                    {
                    LTE17=(Token)input.LT(1);
                    match(input,LTE,FOLLOW_LTE_in_cmpExpressionDef401); 
                    LTE17_tree = (Object)adaptor.create(LTE17);
                    adaptor.addChild(root_0, LTE17_tree);

                    pushFollow(FOLLOW_arithExpression_in_cmpExpressionDef403);
                    arithExpression18=arithExpression();
                    _fsp--;

                    adaptor.addChild(root_0, arithExpression18.getTree());

                    }
                    break;
                case 4 :
                    // Expression.g:89:88: LT arithExpression
                    {
                    LT19=(Token)input.LT(1);
                    match(input,LT,FOLLOW_LT_in_cmpExpressionDef407); 
                    LT19_tree = (Object)adaptor.create(LT19);
                    adaptor.addChild(root_0, LT19_tree);

                    pushFollow(FOLLOW_arithExpression_in_cmpExpressionDef409);
                    arithExpression20=arithExpression();
                    _fsp--;

                    adaptor.addChild(root_0, arithExpression20.getTree());

                    }
                    break;
                case 5 :
                    // Expression.g:89:109: GTE arithExpression
                    {
                    GTE21=(Token)input.LT(1);
                    match(input,GTE,FOLLOW_GTE_in_cmpExpressionDef413); 
                    GTE21_tree = (Object)adaptor.create(GTE21);
                    adaptor.addChild(root_0, GTE21_tree);

                    pushFollow(FOLLOW_arithExpression_in_cmpExpressionDef415);
                    arithExpression22=arithExpression();
                    _fsp--;

                    adaptor.addChild(root_0, arithExpression22.getTree());

                    }
                    break;
                case 6 :
                    // Expression.g:89:131: GT arithExpression
                    {
                    GT23=(Token)input.LT(1);
                    match(input,GT,FOLLOW_GT_in_cmpExpressionDef419); 
                    GT23_tree = (Object)adaptor.create(GT23);
                    adaptor.addChild(root_0, GT23_tree);

                    pushFollow(FOLLOW_arithExpression_in_cmpExpressionDef421);
                    arithExpression24=arithExpression();
                    _fsp--;

                    adaptor.addChild(root_0, arithExpression24.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end cmpExpressionDef

    public static class arithExpression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start arithExpression
    // Expression.g:92:1: arithExpression : addExpression -> ^( ARITHEXPR addExpression ) ;
    public final arithExpression_return arithExpression() throws RecognitionException {
        arithExpression_return retval = new arithExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        addExpression_return addExpression25 = null;


        RewriteRuleSubtreeStream stream_addExpression=new RewriteRuleSubtreeStream(adaptor,"rule addExpression");
        try {
            // Expression.g:93:2: ( addExpression -> ^( ARITHEXPR addExpression ) )
            // Expression.g:94:3: addExpression
            {
            pushFollow(FOLLOW_addExpression_in_arithExpression438);
            addExpression25=addExpression();
            _fsp--;

            stream_addExpression.add(addExpression25.getTree());

            // AST REWRITE
            // elements: addExpression
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 94:17: -> ^( ARITHEXPR addExpression )
            {
                // Expression.g:94:20: ^( ARITHEXPR addExpression )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(ARITHEXPR, "ARITHEXPR"), root_1);

                adaptor.addChild(root_1, stream_addExpression.next());

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end arithExpression

    public static class addExpression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start addExpression
    // Expression.g:97:1: addExpression : addExpressionDef -> ^( ADDEXPR addExpressionDef ) ;
    public final addExpression_return addExpression() throws RecognitionException {
        addExpression_return retval = new addExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        addExpressionDef_return addExpressionDef26 = null;


        RewriteRuleSubtreeStream stream_addExpressionDef=new RewriteRuleSubtreeStream(adaptor,"rule addExpressionDef");
        try {
            // Expression.g:98:2: ( addExpressionDef -> ^( ADDEXPR addExpressionDef ) )
            // Expression.g:99:3: addExpressionDef
            {
            pushFollow(FOLLOW_addExpressionDef_in_addExpression460);
            addExpressionDef26=addExpressionDef();
            _fsp--;

            stream_addExpressionDef.add(addExpressionDef26.getTree());

            // AST REWRITE
            // elements: addExpressionDef
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 99:20: -> ^( ADDEXPR addExpressionDef )
            {
                // Expression.g:99:23: ^( ADDEXPR addExpressionDef )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(ADDEXPR, "ADDEXPR"), root_1);

                adaptor.addChild(root_1, stream_addExpressionDef.next());

                adaptor.addChild(root_0, root_1);
                }

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end addExpression

    public static class addExpressionDef_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start addExpressionDef
    // Expression.g:102:1: addExpressionDef : modExpression ( PLUS modExpression | MINUS modExpression )* ;
    public final addExpressionDef_return addExpressionDef() throws RecognitionException {
        addExpressionDef_return retval = new addExpressionDef_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token PLUS28=null;
        Token MINUS30=null;
        modExpression_return modExpression27 = null;

        modExpression_return modExpression29 = null;

        modExpression_return modExpression31 = null;


        Object PLUS28_tree=null;
        Object MINUS30_tree=null;

        try {
            // Expression.g:103:2: ( modExpression ( PLUS modExpression | MINUS modExpression )* )
            // Expression.g:104:3: modExpression ( PLUS modExpression | MINUS modExpression )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_modExpression_in_addExpressionDef483);
            modExpression27=modExpression();
            _fsp--;

            adaptor.addChild(root_0, modExpression27.getTree());
            // Expression.g:104:17: ( PLUS modExpression | MINUS modExpression )*
            loop5:
            do {
                int alt5=3;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==PLUS) ) {
                    alt5=1;
                }
                else if ( (LA5_0==MINUS) ) {
                    alt5=2;
                }


                switch (alt5) {
            	case 1 :
            	    // Expression.g:104:18: PLUS modExpression
            	    {
            	    PLUS28=(Token)input.LT(1);
            	    match(input,PLUS,FOLLOW_PLUS_in_addExpressionDef486); 
            	    PLUS28_tree = (Object)adaptor.create(PLUS28);
            	    adaptor.addChild(root_0, PLUS28_tree);

            	    pushFollow(FOLLOW_modExpression_in_addExpressionDef488);
            	    modExpression29=modExpression();
            	    _fsp--;

            	    adaptor.addChild(root_0, modExpression29.getTree());

            	    }
            	    break;
            	case 2 :
            	    // Expression.g:104:39: MINUS modExpression
            	    {
            	    MINUS30=(Token)input.LT(1);
            	    match(input,MINUS,FOLLOW_MINUS_in_addExpressionDef492); 
            	    MINUS30_tree = (Object)adaptor.create(MINUS30);
            	    adaptor.addChild(root_0, MINUS30_tree);

            	    pushFollow(FOLLOW_modExpression_in_addExpressionDef494);
            	    modExpression31=modExpression();
            	    _fsp--;

            	    adaptor.addChild(root_0, modExpression31.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end addExpressionDef

    public static class modExpression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start modExpression
    // Expression.g:107:1: modExpression : modExpressionDef -> ^( MODEXPR modExpressionDef ) ;
    public final modExpression_return modExpression() throws RecognitionException {
        modExpression_return retval = new modExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        modExpressionDef_return modExpressionDef32 = null;


        RewriteRuleSubtreeStream stream_modExpressionDef=new RewriteRuleSubtreeStream(adaptor,"rule modExpressionDef");
        try {
            // Expression.g:108:2: ( modExpressionDef -> ^( MODEXPR modExpressionDef ) )
            // Expression.g:109:3: modExpressionDef
            {
            pushFollow(FOLLOW_modExpressionDef_in_modExpression511);
            modExpressionDef32=modExpressionDef();
            _fsp--;

            stream_modExpressionDef.add(modExpressionDef32.getTree());
